# BilateralFilter

./: CMakeLists.txt  Doxyfile  README  mainpage.dox
sample/: sphere_denoised.txt  sphere_noisy_oriented.txt
scripts/: addnoise.py
src/: BilateralFilter.h  FileIO.cpp  FileIO.h  Octree.h  OctreeIterator.h  OctreeNode.h  Point.cpp  Point.h  Sample.cpp  Sample.h  cmdLine.h  main.cpp  types.h  utilities.h
